// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttons/Button Block smoke-test 1`] = `
<div class="sc-aXZVg iginDy">
  <div style="max-width: 100%;">
    <button data-testid="primary-button"
            type="button"
            class="sc-dcJsrY eDZHHQ"
    >
      Block
    </button>
  </div>
</div>
`;

exports[`Buttons/Button Clicked play-test 1`] = `
<div class="sc-aXZVg iginDy">
  <div style="max-width: 100%;">
    <button data-testid="primary-button"
            type="button"
            class="sc-dcJsrY khIlLP"
    >
      Primary
    </button>
  </div>
</div>
`;

exports[`Buttons/Button Disabled smoke-test 1`] = `
<div class="sc-aXZVg iginDy">
  <div style="max-width: 100%;">
    <button type="button"
            disabled
            class="sc-dcJsrY bfsbhm"
    >
      Primary
    </button>
  </div>
</div>
`;

exports[`Buttons/Button Outline smoke-test 1`] = `
<div class="sc-aXZVg iginDy">
  <div style="max-width: 100%;">
    <button type="button"
            class="sc-dcJsrY kNwKzk"
    >
      Outline
    </button>
  </div>
</div>
`;

exports[`Buttons/Button OutlineInverted smoke-test 1`] = `
<div class="sc-aXZVg eJyBUS">
  <div style="max-width: 100%;">
    <button type="button"
            class="sc-dcJsrY cnYoio"
    >
      Outline inverted
    </button>
  </div>
</div>
`;

exports[`Buttons/Button Primary smoke-test 1`] = `
<div class="sc-aXZVg iginDy">
  <div style="max-width: 100%;">
    <button data-testid="primary-button"
            type="button"
            class="sc-dcJsrY khIlLP"
    >
      Primary
    </button>
  </div>
</div>
`;

exports[`Buttons/Button PrimaryInverted smoke-test 1`] = `
<div class="sc-aXZVg eJyBUS">
  <div style="max-width: 100%;">
    <button type="button"
            class="sc-dcJsrY bObaSa"
    >
      Primary inverted
    </button>
  </div>
</div>
`;

exports[`Buttons/Button PrimaryNaked smoke-test 1`] = `
<div class="sc-aXZVg iginDy">
  <div style="max-width: 100%;">
    <button type="button"
            class="sc-dcJsrY eHKrPE"
    >
      <span class="sc-gEvEer gBShiS sc-eqUAAy dYrcXT">
        <svg xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
             viewbox="0 0 50 50"
        >
          <g fill="currentColor"
             fill-rule="evenodd"
             transform="matrix(-1 0 0 1 37.722 1)"
          >
            <path d="M1.768 48c-.26 0-.521-.043-.752-.16-1.134-.578-1.323-1.964-.543-2.807l21.408-20.659L.471 2.965A1.758 1.758 0 0 1 .522.518 1.756 1.756 0 0 1 1.77 0c.446 0 .872.167 1.2.47l22.21 22.56c.729.74.72 1.93-.02 2.657L2.97 47.53c-.324.302-.752.47-1.2.47h-.002Z">
            </path>
          </g>
        </svg>
      </span>
      Naked
    </button>
  </div>
</div>
`;

exports[`Buttons/Button Small smoke-test 1`] = `
<div class="sc-aXZVg iginDy">
  <div style="max-width: 100%;">
    <button type="button"
            class="sc-dcJsrY cPtBYg"
    >
      Small
    </button>
  </div>
</div>
`;

exports[`Buttons/Button WithLeftIcon smoke-test 1`] = `
<div class="sc-aXZVg iginDy">
  <div style="max-width: 100%;">
    <button type="button"
            class="sc-dcJsrY kNwKzk"
    >
      <span class="sc-gEvEer gBShiS sc-eqUAAy bqvqyu">
        <svg viewbox="0 0 50 50"
             xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path d="M0 0h48v14.511H0z">
            </path>
          </defs>
          <g fill="none"
             fill-rule="evenodd"
          >
            <g transform="translate(1 34.489)">
              <path d="M46.326 0a1.675 1.675 0 0 0-1.675 1.674v6.698a2.796 2.796 0 0 1-2.79 2.79H6.139a2.796 2.796 0 0 1-2.79-2.79V1.674a1.674 1.674 0 1 0-3.349 0v6.698a6.145 6.145 0 0 0 6.14 6.14h35.72A6.145 6.145 0 0 0 48 8.371V1.674A1.674 1.674 0 0 0 46.326 0Z"
                    fill="currentColor"
              >
              </path>
            </g>
            <path d="M25 1a1.675 1.675 0 0 0-1.674 1.674v27.684l-10.65-8.877a1.675 1.675 0 0 0-2.143 2.572L23.93 35.216c.081.058.168.109.259.15.066.043.134.082.205.116.388.164.826.164 1.215 0 .07-.034.14-.073.205-.116.091-.041.178-.092.259-.15l13.395-11.163a1.674 1.674 0 0 0-2.143-2.572l-10.65 8.877V2.674A1.674 1.674 0 0 0 25 1Z"
                  fill="currentColor"
            >
            </path>
          </g>
        </svg>
      </span>
      Download catalog
    </button>
  </div>
</div>
`;

exports[`Buttons/Button WithRightIcon smoke-test 1`] = `
<div class="sc-aXZVg iginDy">
  <div style="max-width: 100%;">
    <button type="button"
            class="sc-dcJsrY kNwKzk"
    >
      Download catalog
      <span class="sc-gEvEer gBShiS sc-fqkvVR etyraj">
        <svg viewbox="0 0 50 50"
             xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path d="M0 0h48v14.511H0z">
            </path>
          </defs>
          <g fill="none"
             fill-rule="evenodd"
          >
            <g transform="translate(1 34.489)">
              <path d="M46.326 0a1.675 1.675 0 0 0-1.675 1.674v6.698a2.796 2.796 0 0 1-2.79 2.79H6.139a2.796 2.796 0 0 1-2.79-2.79V1.674a1.674 1.674 0 1 0-3.349 0v6.698a6.145 6.145 0 0 0 6.14 6.14h35.72A6.145 6.145 0 0 0 48 8.371V1.674A1.674 1.674 0 0 0 46.326 0Z"
                    fill="currentColor"
              >
              </path>
            </g>
            <path d="M25 1a1.675 1.675 0 0 0-1.674 1.674v27.684l-10.65-8.877a1.675 1.675 0 0 0-2.143 2.572L23.93 35.216c.081.058.168.109.259.15.066.043.134.082.205.116.388.164.826.164 1.215 0 .07-.034.14-.073.205-.116.091-.041.178-.092.259-.15l13.395-11.163a1.674 1.674 0 0 0-2.143-2.572l-10.65 8.877V2.674A1.674 1.674 0 0 0 25 1Z"
                  fill="currentColor"
            >
            </path>
          </g>
        </svg>
      </span>
    </button>
  </div>
</div>
`;
